--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,6 +38,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Run Trivy for all CVEs (non-blocking)
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ github.run_id }}
+          exit-code: 0
+          format: table         
+
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       # - name: Install cosign
