--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,12 +36,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Login to ghcr.io registry
         uses: docker/login-action@v3
         with:
@@ -53,7 +47,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ghcr.io/bretfisher/docker-ci-automation:${{ github.run_id }}
+          tags: ghcr.io/${{ github.actor }}/httpenv:${{ github.run_id }}
           target: test
           cache-from: type=gha
           cache-to: type=gha,mode=max
