--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,7 +47,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ghcr.io/${{ github.actor }}/httpenv:${{ github.run_id }}
+          tags: ghcr.io/${{ env.IMAGE_NAME }}:${{ github.run_id }}
           target: test
           cache-from: type=gha
           cache-to: type=gha,mode=max
