--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Docker
+hname: Docker
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -53,7 +53,7 @@ jobs:
         with:
           push: true
           tags: ${{ steps.lowercase_repo_name.outputs.name }}:${{ github.run_id }}
-          target: test
+          # target: test #something wrong with target... what is it?
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
