--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,7 +53,8 @@ jobs:
         with:
           push: true
           tags: ${{ steps.lowercase_repo_name.outputs.name }}:${{ github.run_id }}
-          # target: test #something wrong with target... what is it?
+          # target: test 
+          # something wrong with target... what is it?
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
