--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -52,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ${{ github.run_id }}
+          tags: ${{ steps.lowercase_repo_name.outputs.name }}:${{ github.run_id }}
           # target: test 
           # something wrong with target... what is it?
           cache-from: type=gha
@@ -70,7 +70,7 @@ jobs:
       - name: Run Trivy for all CVEs (non-blocking)
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ steps.lowercase_repo_name.outputs.name }}:${{ github.run_id }}
+          image-ref: ${{ github.run_id }}
           exit-code: 0
           format: table      
           
