--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -46,7 +46,8 @@ jobs:
       - name: Build and Push to GHCR
         uses: docker/build-push-action@v5
         with:
-          push: true
+          load: true
+          push: false
           tags: ${{ github.run_id }}
           # target: test 
           # something wrong with target... what is it?
