--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,6 +43,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Make lower case test image name
+        id: lowercase_repo_name
+        run: echo "::set-output name=name::$(echo "ghcr.io/${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')"
+
+      
       - name: Build and Push to GHCR
         uses: docker/build-push-action@v5
         with:
