--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -52,8 +52,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ghcr.io/${{ env.IMAGE_NAME }}:${{ github.run_id }}
-          # target: test 
+          tags: ${{ steps.lowercase_repo_name.outputs.name }}:${{ github.run_id }}
+          # target: test
           # something wrong with target... what is it?
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -67,13 +67,10 @@ jobs:
 
       
     steps:
-      - name: Pull image to scan
-        run: docker pull ghcr.io/${{ env.IMAGE_NAME }}:"$GITHUB_RUN_ID"
-    
       - name: Run Trivy for all CVEs (non-blocking)
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/${{ env.IMAGE_NAME }}:${{ github.run_id }}
+          image-ref: ${{ github.run_id }}
           exit-code: 0
           format: table      
           
