--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -58,6 +58,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
+
   trivy-scan:
     runs-on: ubuntu-latest
     needs: [build-test-image]
@@ -67,10 +68,14 @@ jobs:
 
       
     steps:
+      - name: Make lower case test image name
+        id: lowercase_repo_name
+        run: echo "::set-output name=name::$(echo "ghcr.io/${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')"
+
       - name: Run Trivy for all CVEs (non-blocking)
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ github.run_id }}
+          image-ref: ${{ steps.lowercase_repo_name.outputs.name }}:${{ github.run_id }}
           exit-code: 0
           format: table      
           
