--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -72,6 +72,9 @@ jobs:
         id: lowercase_repo_name
         run: echo "::set-output name=name::$(echo "ghcr.io/${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')"
 
+      - name: Pull test image to scan
+        run: docker pull ${{ steps.lowercase_repo_name.outputs.name }}:"$GITHUB_RUN_ID"
+
       - name: Run Trivy for all CVEs (non-blocking)
         uses: aquasecurity/trivy-action@master
         with:
